--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Andrius Stonys",
+  "author": "Nerijus",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.0",
